# datadog-api-client-generator

./: NOTICE  README.md  pyproject.toml  ruff.toml
src/datadog_api_client_generator/: cli.py  formatter.py  openapi.py
src/datadog_api_client_generator/codegen/: __init__.py
src/datadog_api_client_generator/codegen/python/: python_generator.py  utils.py
src/datadog_api_client_generator/codegen/python/templates/: api.j2  configuration.j2  model.j2  model_enum.j2  model_generic.j2  model_oneof.j2  model_simple.j2
src/datadog_api_client_generator/codegen/shared/: __init__.py  base_codegen.py  templates_env.py  utils.py
src/datadog_api_client_generator/openapi/: formatter.py  openapi.py  openapi_model.py  operation.py  operation_model.py  parameter.py  parameter_model.py  schema.py  schema_model.py  shared.py  shared_model.py  utils.py
tests/: conftest.py  test_formatter.py
tests/examples/: openapi-oneOf.yaml  openapi.yaml
tests/openapi/: test_openapi.py  test_openapi_schemas.py  test_openapi_utils.py
