[tool.poetry]
name = "datadog-api-client-generator"
version = "0.1.0"
description = "Tooling for generating Datadog API clients"
authors = ["Datadog <support@datadoghq.com>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = ">3.9"
pytest = "~7"
PyYAML = "~6"
jsonref = "~0.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
